# questxr-happlay

./: .clang-format  .gitignore  README.md  build-for-pbcons.sh  build-run-watch.sh  settings.gradle  system-architecture.d2
.github/workflows/: debugbuild.yml
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts
app/cpp/: CMakeLists.txt  graphics_plugin.hpp  graphics_plugin_vulkan.cpp  main.cpp  openxr_program.cpp  openxr_program.hpp  openxr_utils.cpp  openxr_utils.hpp  platform.hpp  platform_data.hpp  vulkan_swapchain_context.cpp  vulkan_swapchain_context.hpp
app/cpp/shaders/: CMakeLists.txt
app/cpp/vulkan/: data_type.hpp  vertex_buffer_layout.cpp  vulkan_buffer.hpp  vulkan_rendering_context.cpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_utils.cpp  vulkan_utils.hpp
app/cpp/vulkanwrapper/: redering_pipeline_config.hpp  (+1 more)
app/src/: CMakeLists.txt  format_helpers.h  graphics_plugin_vulkan.cpp  main.cpp  openxr_program.cpp  openxr_program.hpp  openxr_utils.cpp  openxr_utils.hpp  platform_android.cpp  websocket.cpp  websocket.hpp
app/src/vulkanwrapper/: data_type.cpp  format_helpers.h  vertex_buffer_layout.hpp  vulkan_buffer.cpp  vulkan_rendering_context.hpp  vulkan_rendering_pipeline.cpp  vulkan_shader.cpp  vulkan_utils.cpp
app/test_audio/: dog_barking_haptic.pcm_f32le  dog_barking_haptic.pcm_f32le.hpp  readpcm.mjs
docs/: system-architecture.d2
server/: jsconfig.json  package-lock.json  package.json
server/frontend/: caption.css  default-audio-file.json  index.html  script.mjs  style.css  videorating.css
server/src/: main.mjs
(+16 files in other folders)
